added header saction

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+<!--font awsome links-->
+<script
+src="https://kit.fontawesome.com/bbfc4be646.js"
+crossorigin="anonymous"
+></script>
 <!--tailwind links-->
 <script src="https://cdn.tailwindcss.com"></script>
 <script>
@@ -23,6 +28,35 @@
 </script>
 </head>
 <body>
+  <!--main content-->
+  <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+    <!--header saction-->
+    <header class="flex pt-10 mb-20">
+      <!--text container-->
+      <div>
+        <h1 class="text-5xl md:text-7xl">It's good <br>tea time at The <br> Tea House</h1>
+        <br>
+        <p class="text-gray-500">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+        <br>
+        <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+      </div>
+    <!--img-container-->
+    <div class="relative">
+      <img class="w-full" src="images/banner.png" alt="">
+      <!--card-->
+      <div class="flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg absolute
+      top-28 md:top-80 md:left-32 lg:left-28">
+        <!--star icon-->
+        <div class="text-2xl text-amber-500"><i class="fa-solid fa-star"></i></div>
+        <div class="ml-2">
+          <!--text-->
+          <h2 class="lg:text-2xl font-bold">5.00</h2>
+          <p class="text-gray-500">Trust Pilot Ratings</p>
+        </div>
+      </div>
+    </div>
+    </header>
+  </main>
   
 </body>
 </html>
