--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@ crossorigin="anonymous"
       </div>
     </div>
     </header>
+
+
+    <!--Featured Products saction-->
+    <section class="py-8 lg:py-24 ">
+      <!--title-->
+      <div class="text-center mb-8">
+        <h1 class="text-3xl md:text-4xl font bold mb-5">Our Featured Products</h1>
+        <p class="text-gray-600">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      </div>
+
+    </section>
   </main>
   
 </body>
